<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="se.axel.bengtsson.kinapokerscorecalculator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hand1"
        android:name="se.axel.bengtsson.kinapokerscorecalculator.ui.hand1.Hand1Fragment"
        android:label="@string/hand1"
        tools:layout="@layout/fragment_hand1" />

    <fragment
      android:id="@+id/nav_hand2"
      android:name="se.axel.bengtsson.kinapokerscorecalculator.ui.hand1.Hand2Fragment"
      android:label="@string/hand2"
      tools:layout="@layout/fragment_hand2" />

    <fragment
      android:id="@+id/nav_hand3"
      android:name="se.axel.bengtsson.kinapokerscorecalculator.ui.hand1.Hand3Fragment"
      android:label="@string/hand3"
      tools:layout="@layout/fragment_hand3" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="se.axel.bengtsson.kinapokerscorecalculator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>
